<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_sea_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/profile_menu"
            app:title="Profil"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolBarStyle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mToolbar">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/dark_sea_green"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/dark_sea_green" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/img_sample_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/HeadlineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/example_name_user"
                android:textColor="@color/pale_green"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_user_profile"
                app:layout_constraintStart_toEndOf="@id/iv_user_profile"
                app:layout_constraintTop_toTopOf="@id/iv_user_profile" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.capstone.recyscan.components.ComponentUnderlinedEditText

            android:id="@+id/edt_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            app:edtLabel="@string/title_email"
            app:layout_constraintTop_toBottomOf="@id/stack"
            app:setTextValue="@string/sample_email" />

        <com.capstone.recyscan.components.ComponentUnderlinedEditText
            android:id="@+id/edt_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            app:edtLabel="@string/title_password"
            app:isPasswordType="true"
            app:layout_constraintTop_toBottomOf="@id/edt_user_email"
            app:setTextValue="@string/sample_email" />

        <com.capstone.recyscan.components.ComponentUnderlinedEditText
            android:id="@+id/edt_user_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            app:edtLabel="@string/title_phone_number"
            app:layout_constraintTop_toBottomOf="@id/edt_user_password"
            app:setTextValue="@string/sample_phone_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>