<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProfileEditActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_sea_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/edit_profile_menu"
        app:title="Edit Profil"
        app:titleCentered="true"
        app:titleTextAppearance="@style/ToolBarStyle" />

    <FrameLayout
        android:id="@+id/photo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="29dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mToolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_user_profile"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:src="@drawable/img_sample_user" />

        <ImageButton
            android:id="@+id/btn_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/gallery_icon" />
    </FrameLayout>

    <com.capstone.recyscan.components.ComponentUnderlinedEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/photo_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/photo_layout"
        app:layout_constraintTop_toTopOf="@+id/photo_layout"
        app:setTextValue="Nama Pengguna" />

    <com.capstone.recyscan.components.ComponentUnderlinedEditText
        android:id="@+id/edt_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:edtLabel="@string/title_email"
        app:setTextValue="@string/sample_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo_layout" />

    <com.capstone.recyscan.components.ComponentUnderlinedEditText
        android:id="@+id/edt_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:isPasswordType="true"
        app:edtLabel="@string/title_password"
        app:setTextValue="@string/sample_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_user_email" />

    <com.capstone.recyscan.components.ComponentUnderlinedEditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        app:setTextValue="@string/sample_phone_number"
        app:edtLabel="@string/title_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_user_password" />

</androidx.constraintlayout.widget.ConstraintLayout>