<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/recyscan_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_headline_login"
            style="@style/HeadlineText2"
            android:layout_marginTop="39dp"
            android:text="@string/title_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_app_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_google"
            style="@style/OutlinedButtonStyle"
            android:layout_marginStart="36dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="36dp"
            android:text="@string/title_login_with_google"
            app:icon="@drawable/google_icon"
            app:iconGravity="textStart"
            app:iconSize="20dp"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_headline_login" />

        <View
            android:id="@+id/leftLine"
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_marginStart="36dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/headline_or"
            app:layout_constraintEnd_toStartOf="@id/headline_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/headline_or" />

        <TextView
            android:id="@+id/headline_or"
            style="@style/HeadlineText2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="20dp"
            android:text="@string/title_or"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/rightLine"
            app:layout_constraintStart_toEndOf="@id/leftLine"
            app:layout_constraintTop_toBottomOf="@id/btn_login_google" />

        <View
            android:id="@+id/rightLine"
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_marginEnd="36dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/headline_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/headline_or"
            app:layout_constraintTop_toTopOf="@+id/headline_or" />

        <com.capstone.recyscan.components.CustomViewEditText
            android:id="@+id/edt_user_name"
            style="@style/FixedEditTextLayout"
            android:layout_marginTop="31dp"
            app:hintText="Nama pengguna"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headline_or" />

        <com.capstone.recyscan.components.CustomViewEditText
            android:id="@+id/edt_password"
            style="@style/FixedEditTextLayout"
            android:layout_marginTop="17dp"
            app:hintText="Kata Sandi"
            app:isPassword="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_user_name" />

        <TextView
            style="@style/HeadlineText2"
            android:layout_marginBottom="5dp"
            android:text="@string/title_forgot_password"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/btn_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/OutlinedButtonStyle"
            android:layout_marginStart="36dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="36dp"
            android:text="@string/title_login"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:backgroundTint="@color/dark_sea_green"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_password" />

        <TextView
            android:id="@+id/tv_sub_headline"
            style="@style/HeadlineText2"
            android:layout_marginTop="51dp"
            android:text="@string/title_dont_have_an_account"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_btn_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/tv_btn_register"
            style="@style/HeadlineText2"
            android:layout_marginStart="1dp"
            android:text="@string/title_try_register"
            android:textColor="@color/dark_sea_green"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_sub_headline"
            app:layout_constraintTop_toTopOf="@id/tv_sub_headline" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</ScrollView>
