<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_sea_green"
    tools:context=".views.HomeActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="38dp"
        android:src="@drawable/img_sample_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_name"
        style="@style/HeadlineText"
        android:layout_marginStart="10dp"
        android:text="@string/example_name_user"
        android:textColor="@color/pale_green"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_user_profile"
        app:layout_constraintStart_toEndOf="@id/iv_user_profile"
        app:layout_constraintTop_toTopOf="@id/iv_user_profile" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/HeadlineText"
        android:layout_width="match_parent"
        android:layout_marginStart="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="35dp"
        android:elegantTextHeight="true"
        android:text="@string/app_description"
        android:textColor="@color/pale_green"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_profile" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="-45dp"
        app:cardBackgroundColor="@color/pale_green"
        app:cardCornerRadius="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_card_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="72dp"
            app:rippleColor="@color/gray"
            android:layout_marginEnd="25dp"
            app:cardBackgroundColor="@color/dark_brown"
            app:cardCornerRadius="45dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_scanner"
                    android:layout_width="93dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/scanner_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/HeadlineText"
                    android:gravity="center"
                    android:text="@string/title_scan_garbage"
                    android:textColor="@color/pale_green"
                    android:textSize="17.4sp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_scanner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_scanner"
                    app:layout_constraintTop_toTopOf="@id/iv_scanner" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>